Add parallel selection loop and DoublePoint struct-of-arrays fast path