@@ -1,7 +1,9 @@
 package com.ggalmazor.ltdownsampling;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
+import java.util.stream.IntStream;
 
 /**
  * The LTThreeBuckets class is the main entry point to this library.
@@ -10,6 +12,13 @@ import java.util.List;
  */
 @SuppressWarnings("checkstyle:AbbreviationAsWordInName") // LT is a domain abbreviation (Largest Triangle)
 public final class LTThreeBuckets {
+
+  /**
+   * Minimum number of buckets to engage the parallel triangle-selection path.
+   *
+   * <p>Below this threshold, thread-management overhead exceeds the work saved.
+   */
+  static final int PARALLEL_THRESHOLD = 512;
 
   private LTThreeBuckets() {}
 
@@ -46,6 +55,13 @@ public final class LTThreeBuckets {
    * <p>The output list will have {@code desiredBuckets + 2} elements: one per bucket plus the
    * first and last points of the original series.
    *
+   * <p>When the input contains {@link DoublePoint} instances, an optimised struct-of-arrays
+   * path is used: x and y coordinates are extracted into contiguous {@code double[]} arrays
+   * before the selection loop, eliminating per-point pointer chasing in the hot path.
+   *
+   * <p>When {@code desiredBuckets} exceeds {@value #PARALLEL_THRESHOLD}, the triangle-selection
+   * loop runs in parallel using the common {@link java.util.concurrent.ForkJoinPool}.
+   *
    * @param input          the input list of {@link Point} points to downsample
    * @param inputSize      the size of the input list
    * @param desiredBuckets the desired number of buckets for the downsampled output list
@@ -53,25 +69,118 @@ public final class LTThreeBuckets {
    * @return the downsampled output list
    */
   public static <T extends Point> List<T> sorted(List<T> input, int inputSize, int desiredBuckets) {
-    List<T> results = new ArrayList<>(desiredBuckets);
     List<Bucket<T>> buckets = OnePassBucketizer.bucketize(input, inputSize, desiredBuckets);
 
-    for (int i = 0; i <= buckets.size() - 3; i++) {
-      Triangle<T> triangle = Triangle.of(buckets.subList(i, i + 3));
-
-      if (results.isEmpty()) {
-        results.add(triangle.getFirst());
-      }
-
-      results.add(triangle.getResult());
-
-      if (results.size() == desiredBuckets + 1) {
-        results.add(triangle.getLast());
-        break;
-      }
+    // Check whether we can use the DoublePoint struct-of-arrays fast path
+    if (!input.isEmpty() && input.get(0) instanceof DoublePoint) {
+      @SuppressWarnings("unchecked")
+      List<DoublePoint> dpInput = (List<DoublePoint>) input;
+      @SuppressWarnings("unchecked")
+      List<Bucket<DoublePoint>> dpBuckets = (List<Bucket<DoublePoint>>) (List<?>) buckets;
+      @SuppressWarnings("unchecked")
+      List<T> result = (List<T>) sortedDoublePoint(dpInput, dpBuckets, desiredBuckets);
+      return result;
     }
 
+    return sortedGeneric(buckets, desiredBuckets);
+  }
+
+  /**
+   * Struct-of-arrays fast path for {@link DoublePoint} inputs.
+   *
+   * <p>Extracts all coordinates into contiguous {@code double[]} arrays once, then the
+   * inner selection loop operates on primitive arrays with no pointer chasing.
+   */
+  private static List<DoublePoint> sortedDoublePoint(
+      List<DoublePoint> input,
+      List<Bucket<DoublePoint>> buckets,
+      int desiredBuckets) {
+    // Extract coordinates into contiguous primitive arrays
+    int size = input.size();
+    double[] xs = new double[size];
+    double[] ys = new double[size];
+    for (int i = 0; i < size; i++) {
+      DoublePoint p = input.get(i);
+      xs[i] = p.x();
+      ys[i] = p.y();
+    }
+
+    @SuppressWarnings("unchecked")
+    DoublePoint[] middleResults = new DoublePoint[desiredBuckets];
+
+    IntStream stream = IntStream.range(0, desiredBuckets);
+    if (desiredBuckets >= PARALLEL_THRESHOLD) {
+      stream = stream.parallel();
+    }
+
+    stream.forEach(i -> middleResults[i] = selectBestDoublePoint(buckets, xs, ys, i));
+
+    List<DoublePoint> results = new ArrayList<>(desiredBuckets + 2);
+    results.add(buckets.getFirst().getFirst());
+    results.addAll(Arrays.asList(middleResults));
+    results.add(buckets.getLast().getLast());
     return results;
   }
 
+  /**
+   * Selects the {@link DoublePoint} from the center bucket at window {@code offset} that forms
+   * the triangle with the largest area, operating entirely on primitive {@code double[]} arrays.
+   */
+  private static DoublePoint selectBestDoublePoint(
+      List<Bucket<DoublePoint>> buckets,
+      double[] xs,
+      double[] ys,
+      int offset) {
+    Bucket<DoublePoint> left = buckets.get(offset);
+    Bucket<DoublePoint> center = buckets.get(offset + 1);
+    Bucket<DoublePoint> right = buckets.get(offset + 2);
+
+    double lx = left.getResult().x();
+    double ly = left.getResult().y();
+    double rx = right.getCenter().x();
+    double ry = right.getCenter().y();
+
+    DoublePoint bestPoint = null;
+    double bestArea = -1.0;
+
+    for (DoublePoint candidate : center.points()) {
+      double cx = candidate.x();
+      double cy = candidate.y();
+      // area of a triangle = |[Ax(By - Cy) + Bx(Cy - Ay) + Cx(Ay - By)] / 2|
+      double area = Math.abs(lx * (cy - ry) + cx * (ry - ly) + rx * (ly - cy)) / 2.0;
+      if (area > bestArea) {
+        bestArea = area;
+        bestPoint = candidate;
+      }
+    }
+
+    return bestPoint;
+  }
+
+  /**
+   * Generic path for arbitrary {@link Point} implementations.
+   *
+   * <p>Uses the index-based {@link Triangle#of(List, int)} factory to avoid allocating a
+   * {@code subList} view on each iteration, and runs in parallel above
+   * {@value #PARALLEL_THRESHOLD} buckets.
+   */
+  @SuppressWarnings("unchecked")
+  private static <T extends Point> List<T> sortedGeneric(
+      List<Bucket<T>> buckets,
+      int desiredBuckets) {
+    T[] middleResults = (T[]) new Point[desiredBuckets];
+
+    IntStream stream = IntStream.range(0, desiredBuckets);
+    if (desiredBuckets >= PARALLEL_THRESHOLD) {
+      stream = stream.parallel();
+    }
+
+    stream.forEach(i -> middleResults[i] = Triangle.of(buckets, i).getResult());
+
+    List<T> results = new ArrayList<>(desiredBuckets + 2);
+    results.add(buckets.getFirst().getFirst());
+    results.addAll(Arrays.asList(middleResults));
+    results.add(buckets.getLast().getLast());
+    return results;
+  }
 }
